<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Book Store Inventory App</string>
    <string name="category_book_title">Book Title</string>
    <string name="hint_book_title">Title</string>
    <string name="category_book">Book Info</string>
    <string name="hint_author">Author</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="category_supplier">Supplier Info</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone Number</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="editor_insert_book_failed">Error adding book!</string>
    <string name="editor_insert_book_successful">Book added to inventory!</string>

    <string name="empty_view_text">There are no books in the inventory!\n Hit the plus sign
        below to add a book!</string>

    <string name="item_quantity">Quantity: <xliff:g id="quantity" example="5">%s</xliff:g></string>
    <string name="item_price">Price: $<xliff:g id="price" example="$5.00">%s</xliff:g></string>
    <string name="item_supplier">Supplier: <xliff:g id="supplier" example="Publishers">%s</xliff:g></string>
    <string name="item_supplier_phone">Supplier No.: <xliff:g id="supplier_phone" example="(312) 555-5555">%s</xliff:g></string>

    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_update_book_failed">Error updating book.</string>
    <string name="editor_update_book_successful">Book updated successfully.</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_failed">Error deleting book.</string>
    <string name="editor_delete_book_success">Book deleted.</string>
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="quantity_display">Quantity: #</string>
    <string name="display_price">Price: $</string>
    <string name="button_sale">Sale</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>
    <string name="editor_max_books">Maximum number of books is 100.</string>
    <string name="editor_min_books">The minimum number of books is 0.</string>
    <string name="editor_min_price_warning">Minimum price must be $0.01.</string>
    <string name="editor_min_price">0.01</string>
    <string name="editor_required_field">Required field.</string>
    <string name="editor_quantity_range_warning">The quantity must be between 0 and 100.</string>
    <string name="editor_max_quantity">100</string>
    <string name="editor_min_quantity">0</string>
    <string name="editor_all_fields_required">All fields are required.</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="editor_phone_length_warning">Phone number must be 10 digits long.</string>
</resources>
